--- a/webpages/index.html
+++ b/webpages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/index.css" />
     <script type="module" defer src="./src/static/index.js?=1"></script>
     <script
       src="https://kit.fontawesome.com/13e3511e22.js"
@@ -24,10 +24,10 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="account-ops">
-          <div class="button login">Sign In</div>
-          <div class="button register">
+          <a href="login.html" class="button login">Sign In</a>
+          <a href="register.html" class="button register">
             Get Started <i class="fa-solid fa-chevron-right"></i>
-          </div>
+          </a>
         </div>
       </nav>
     </header>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="about-img">
-        <img src="/Team work-amico.svg" alt="" />
+        <img src="./src/contents/imgs/Team_work-amico.svg" alt="" />
       </div>
     </section>
 
@@ -86,7 +86,7 @@
       <div class="features-container inter">
         <div class="grid">
           <div class="grid-item">
-            <img src="Business Plan-amico.svg" alt="" />
+            <img src="./src/contents/imgs/Business_Plan-amico.svg" alt="" />
 
             <div class="grid-text">
               <h3>Transparent Business</h3>
@@ -126,7 +126,7 @@
           </div>
 
           <div class="grid-item">
-            <img src="Memory storage-bro.svg" alt="" />
+            <img src="./src/contents/imgs/Memory_storage-bro.svg" alt="" />
 
             <div class="grid-text">
               <h3>100 Gigabyte Storage</h3>
@@ -135,7 +135,7 @@
           </div>
 
           <div class="grid-item">
-            <img src="File searching-amico.svg" alt="" />
+            <img src="./src/contents/imgs/File_searching-amico.svg" alt="" />
 
             <div class="grid-text">
               <h3>File Sharing</h3>
@@ -144,7 +144,7 @@
           </div>
 
           <div class="grid-item">
-            <img src="Task-bro.svg" alt="" />
+            <img src="./src/contents/imgs/Task-bro.svg" alt="" />
 
             <div class="grid-text">
               <h3>Task Manager</h3>
@@ -153,7 +153,7 @@
           </div>
 
           <div class="grid-item">
-            <img src="Deadline-rafiki.svg" alt="" />
+            <img src="./src/contents/imgs/Deadline-rafiki.svg" alt="" />
 
             <div class="grid-text">
               <h3>Deadline Tracker</h3>
@@ -167,7 +167,7 @@
     <section id="contact" class="inter">
       <div id="contact-heading">Get in Touch Now!</div>
       <div class="contact-section">
-        <img src="/Settings-rafiki.svg" alt="" />
+        <img src="./src/contents/imgs/Settings-rafiki.svg" alt="" />
         <div id="contact-container">
           <form id="contact-form">
             <input type="text" name="name" id="name-input" placeholder="Name" />
