--- a/webpages/register.html
+++ b/webpages/register.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./src/css/accessControl.css?=5">
+        <link rel="stylesheet" href="./src/css/accessControl.css?v=6">
         <script src="./src/static/register.js?=2"></script>
         <title>DS | Sign Up</title>
     </head>
