--- a/webpages/login.html
+++ b/webpages/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/accessControl.css?=1">
-    <script type="module" defer src="./src/static/login.js?=1"></script>  
+    <link rel="stylesheet" href="./src/css/accessControl.css?v=6">
+    <script type="module" defer src="./src/static/login.js?v=1"></script>  
     <title>DS | Log In</title>
 </head>
 
