second grand update

--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -104,7 +104,12 @@
               name="scrumboard_ID"
               value="0"
             />
-            <input type="hidden" id="statusVAL" name="statusVAL" value="1" />
+            <input
+              type="hidden"
+              id="status_VALUE"
+              name="status_VALUE"
+              value="1"
+            />
           </form>
         </div>
       </div>
