--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./src/static/handlebar.js"></script>
     <script src="./src/static/scrumBoard.js?=3" defer></script>
+    <script src="./src/static/addTask.js" defer></script>
     <link
       rel="stylesheet"
       href="./src/css/scrumBoard.css?=2"
