added google drive page to userView

--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -96,6 +96,11 @@
               <p><i class="fa-solid fa-timeline"></i>Project Deadlines</p>
             </div>
           </div>
+          <div id="google-drive"
+              class="sidebar-toggle"
+              onclick="loadContent('./src/googleDrive/googleDrive.html')">
+              <p><i class="fa-brands fa-google-drive"></i></i>Google Drive</p>
+            </div>
           <div>
             <div
               id="deadlines"
