--- a/webpages/deadlines.html
+++ b/webpages/deadlines.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
-    <link rel="stylesheet" href="/src/css/deadlines.css" />
-    <script src="./src/static/deadlines.js?v=4"></script>
+    <link rel="stylesheet" href="./src/css/deadlines.css?v=1" />
+    <script src="./src/static/deadlines.js?v=20"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
   </head>
   <body>
+    <div class="topbar">
+      <div class="page-name">
+        <button onclick="omitData('undefined')"><i class="fa-solid fa-house"></i>Home</button>
+      </div>
+    </div>
     <div id="overlay"></div>
 
     <div id="popup">
@@ -28,13 +37,10 @@
             <div class="task-name"></div>
             <div class="task-date"></div>
           </div>
-          <div class="progress-bar">
-            <div class="progress-child" ></div>
-          </div>
-          <button class="deadline-details-btn"></button>
+          <div class="days-left"></div>
+          <button class="deadline-details-btn">Details</button>
         </div>
       </template>
-
     </div>
   </body>
 </html>
