--- a/webpages/index.html
+++ b/webpages/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="./src/css/index.css?v=2" />
     <script type="module" defer src="./src/static/index.js?=1"></script>
+    <script type="module" defer src="./index.php"></script>
     <script
       src="https://kit.fontawesome.com/13e3511e22.js"
       crossorigin="anonymous"
@@ -42,12 +43,12 @@
         Ready to supercharge your team's productivity? Join us now and see how
         easy work can be.
       </p>
-      <button class="cta-button">
+      <a href="login.html" class="cta-button">
         Get Started <i class="fa-solid fa-chevron-right"></i>
-      </button>
-      <button class="demo-button">
+      </a>
+      <a href="http://discovery-rtd.readthedocs.io/" class="demo-button">
         Documentation<i class="fa-solid fa-chevron-right"></i>
-      </button>
+      </a>
     </div>
     <div class="product-showcase">
       <img
