--- a/webpages/login.html
+++ b/webpages/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/accessControl.css?v=6">
-    <script type="module" defer src="./src/static/login.js?v=1"></script>  
+    <script type="module" defer src="./src/static/login.js?v=1"></script>
     <title>DS | Log In</title>
 </head>
 
@@ -15,11 +15,10 @@
         <h1 class="access-header">Log In</h1>
 
         <form action="login.php" method="POST" id="loginform">
-            <input type="email" id="email" name="email"  placeholder="Email"  required/>
-            <input type="password" id="password" name="password" placeholder="Password" required/>
-            <input type="submit" class="submit-form" value="Log In"/>
-            <!-- style="cursor:pointer; opacity:1" -->
-            <p id="error"></p>
+            <input type="email" id="email" name="email" placeholder="Email" required />
+            <p id="email-feedback" class="feedback">Invalid email</p>
+            <input type="password" id="password" name="password" placeholder="Password" required />
+            <input type="submit" class="submit-form" value="Log In" />
         </form>
         <div class="info-container">
             <a id="forgot-pw" class="access-info">I forgot my password</a>
