--- a/webpages/register.html
+++ b/webpages/register.html
@@ -1,54 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./src/css/accessControl.css?v=6">
-        <script src="./src/static/register.js?=2"></script>
-        <title>DS | Sign Up</title>
-    </head>
-    <body>
-        <div class="access-container">
-            <h1 class="access-header">Sign Up</h1>
-            <form action="register.php" method="POST" id="signupform">
-                <input
-                    type="text"
-                    id="username"
-                    name="username"
-                    placeholder="Username"
-                    required
-                >
-                <input
-                    type="email"
-                    id="email"
-                    name="email"
-                    placeholder="Email"
-                    required
-                >
-                <input
-                    type="password"
-                    id="password"
-                    name="password"
-                    placeholder="Password"
-                    required
-                >
-                <p id="pw-info" class="hidden"></p>
-                <input
-                    type="password"
-                    id="confirmpassword"
-                    name="confirmpassword"
-                    placeholder="Confirm Password"
-                    required
-                >
-                <p id="confirm-info" class="hidden"></p>
-                <input
-                    type="submit"
-                    class="submit-form"
-                    value="Sign Up"
-                    disabled
-                >
-            </form>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/accessControl.css?v=6">
+    <script src="./src/static/register.js?=2"></script>
+    <title>DS | Sign Up</title>
+</head>
+
+<body>
+    <div class="access-container">
+        <h1 class="access-header">Sign Up</h1>
+
+        <form action="register.php" method="POST" id="signupform">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <p id="username-feedback" class="feedback"></p>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <p id="email-feedback" class="feedback">Invalid email.</p>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <p id="password-feedback" class="feedback"></p>
+            <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" required>
+            <p id="confirm-feedback" class="feedback">Passwords are not matching</p>
+            <input type="submit" class="submit-form" value="Sign Up" disabled>
+        </form>
+        <div class="info-container">
             <a id="login-link" class="access-info" href="./login.html">Already have an account?</a>
-        </div>
-    </body>
+        </div>    
+    </div>
+</body>
+
 </html>
