--- a/webpages/deadlines.html
+++ b/webpages/deadlines.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
-    <link rel="stylesheet" href="./src/css/deadlines.css?v=2" />
-    <script src="./src/static/deadlines.js?v=20"></script>
+    <link rel="stylesheet" href="./src/css/deadlines.css?v=3" />
+    <script src="./src/static/deadlines.js?v=32"></script>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -43,20 +43,18 @@
       </template>
     </div>
 
-    <div class="deadline-details-popup" id="deadline-details-popup">
+    <div class="deadline-details-popup hide" id="deadline-details-popup">
       <div class="deadline-details-content" id="deadline-details-content">
         <div id="deadline-details-actions">
           <button type="button" id="deadline-details-close">X</button>
         </div>
         <div id="deadline-details-wrapper">
-          <h2>Task Name</h2>
-          <p id="deadline">Deadline: </p>
-          <p id="description">Description: </p>
+          <h2 class="deadline-name"></h2>
+          <p id="deadline"></p>
+          <p id="description"></p>
         </div>
         <p class="contributors-text">Contributors:</p>
-        <div id="deadline-details-contributors">
-          <a>test1@gmail.com</a>
-          <a>test2@gmail.com</a>
+        <div id="deadline-details-assignees">
         </div>
         <div id="deadline-details-actions">
           <button type="button" id="leave" class="deadline-details-delete">Leave deadline</button>
