--- a/webpages/index.html
+++ b/webpages/index.html
@@ -42,7 +42,7 @@
         Ready to supercharge your team's productivity? Join us now and see how
         easy work can be.
       </p>
-      <a href="login.html" class="cta-button">
+      <a href="register.html" class="cta-button">
         Get Started <i class="fa-solid fa-chevron-right"></i>
       </a>
       <a href="http://discovery-rtd.readthedocs.io/" class="demo-button">
