--- a/webpages/index.html
+++ b/webpages/index.html
@@ -50,7 +50,10 @@
       </a>
     </div>
     <div class="product-showcase">
-      <img src="/screencapture-discoveria-online-user-view-php-2024-05-02-00_32_51.png" alt="" class="product" />
+      <video class="product" controls>
+        <source src="./src/contents/vids/product-showcase.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>        
     </div>
   </section>
   <section id="about">
